# xplane-udp-bridge

./: .editorconfig  .gitignore  README.md
client/app/: .gitignore  package-lock.json  package.json
client/app/app/: index.tsx
client/flutters/: pubspec.yaml
client/flutters/android/app/: build.gradle.kts
client/flutters/ios/Runner.xcodeproj/: project.pbxproj
client/flutters/lib/: helper.dart  main.dart
client/flutters/lib/data/: udp.dart
client/flutters/lib/ui/view/: home.dart
client/flutters/lib/viewmodel/: dataref.dart  udp.dart
client/flutters/linux/runner/: my_application.cc
client/flutters/macos/Runner.xcodeproj/: project.pbxproj
client/go/: go.mod  go.sum  golangci.bat  install-tools.bat
client/go/main/: dataref.go  main.go  udp.go
client/go/tools/: tools.go
client/python/: .pre-commit-config.yaml  main.py  pyproject.toml
client/python/src/: dataref.py  main.py  udp.py  udpclient.py
client/rust/: .gitignore  Cargo.toml  build.bat
client/rust/main/: build.bat
client/rust/main/src/: dataref.rs  main.rs
client/rust/src/: dataref.rs  main.rs  udp.rs
demo/go/: .golangci.yml
demo/go/main/: udp.go
demo/python/: .gitignore  README.md  pyproject.toml
demo/rust/: Cargo.toml  rustfmt.toml
demo/rust/src/: dataref.rs  main.rs
plugin/: .env.example  .gitignore  Cargo.toml  build.bat  rustfmt.toml
plugin/dylib/: Cargo.toml
plugin/dylib/src/: dataref.rs  error.rs  lib.rs  xpl.rs
plugin/infra/: Cargo.toml
plugin/infra/src/: lib.rs  logger.rs
plugin/infra/src/udp/: error.rs  handler.rs  mod.rs  request.rs  response.rs  server.rs
plugin/mock/: Cargo.toml
plugin/mock/src/: dataref.rs  error.rs  main.rs
plugin/src/: error.rs  lib.rs  logger.rs  plugin.rs  udp.rs
plugin/src/udp/: dispatcher.rs  handler.rs  mod.rs  request.rs  response.rs  server.rs
plugin/src/udp/message/: dispatcher.rs  format.rs  handler.rs  mod.rs  spec.rs
