[package]
name = "xplane-udp-bridge-plugin"
version = "1.0.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
xplm = "0.4.2"
chrono = "0.4.42"
tracing = "0.1.41"
thiserror = "2.0.17"
tracing-subscriber = "0.3.20"
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "net"] }
