[workspace]
members = ["dylib", "infra"]
resolver = "3"

[workspace.package]
version = "1.0.0"
edition = "2024"

[workspace.dependencies]
# internal dependencies
infra = { path = "infra" }
# external dependencies
xplm = "0.4.2"
chrono = "0.4.42"
tracing = "0.1.43"
thiserror = "2.0.17"
tracing-subscriber = "0.3.22"
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "net"] }
