[workspace]
members = ["dylib", "infra", "mock"]
resolver = "3"

[workspace.package]
version = "1.0.0"
edition = "2024"

[workspace.dependencies]
# internal dependencies
infra = { path = "infra" }
# external dependencies
xplm = "0.4.2"
chrono = "0.4.42"
thiserror = "2.0.17"
tracing-subscriber = "0.3.22"
tracing = { version = "0.1.43", features = ["max_level_info"] }
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "net"] }
