[project]
name = "xplane-udp-bridge-python-client"
version = "1.0.0"
description = "Python client for XPlane UDP bridge plugin"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pre-commit>=4.4.0",
    "pyright>=1.1.407",
    "ruff>=0.14.5",
]

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = ["README.md"]

[tool.ruff.lint]
select = ["C4", "E", "F", "I", "PERF", "UP"]
ignore = ["PERF203"]
