[project]
name = "xplane-udp-bridge-python-client"
version = "1.0.0"
description = "Python client for XPlane UDP bridge plugin"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "termcolor>=3.2.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "pyright>=1.1.407",
    "ruff>=0.14.7",
]

[tool.ruff]
line-length = 120
target-version = "py313"
extend-exclude = ["README.md"]

[tool.ruff.lint]
select = ["C4", "E", "F", "I", "PERF", "UP"]
ignore = ["PERF203"]
